# kdepimlibs

./: CMakeLists.txt  KdepimLibsConfig.cmake.in  Mainpage.dox
akonadi/: CMakeLists.txt
akonadi/tests/: CMakeLists.txt
akonadi/xml/: CMakeLists.txt
cmake/modules/: FindGpgme.cmake  FindKDE4_QGpgme.cmake  FindQGpgme.cmake
gpgme++/: CMakeLists.txt  GpgmeppConfig.cmake.in
includes/tests/: CMakeLists.txt
kalarmcal/: CMakeLists.txt  kaevent.cpp
kde4_gpgme++/: CMakeLists.txt  assuanresult.cpp  assuanresult.h  callbacks.cpp  configuration.h  context.cpp  context.h  context_glib.cpp  context_p.h  context_vanilla.cpp  data.cpp  data.h  data_p.h  decryptionresult.cpp  decryptionresult.h  defaultassuantransaction.h  editinteractor.h  encryptionresult.cpp  encryptionresult.h  engineinfo.cpp  engineinfo.h  error.h  eventloopinteractor.cpp  eventloopinteractor.h  exception.h  global.h  gpgadduserideditinteractor.h  gpgagentgetinfoassuantransaction.h  gpgsetexpirytimeeditinteractor.h  gpgsetownertrusteditinteractor.h  gpgsignkeyeditinteractor.h  importresult.cpp  importresult.h  key.cpp  key.h  keygenerationresult.cpp  keygenerationresult.h  keylistresult.cpp  keylistresult.h  notation.h  (+11 more)
kde4_gpgme++/interfaces/: CMakeLists.txt  assuantransaction.h  dataprovider.h
kde4_qgpgme/: CMakeLists.txt  Mainpage.dox  dataprovider.cpp  dataprovider.h  eventloopinteractor.cpp  eventloopinteractor.h  eventloopinteractor_unix.cpp  eventloopinteractor_win.cpp
kde4_qgpgme/tests/: CMakeLists.txt  dataprovidertest.cpp  editinteractortest.cpp  gpgadduseridtest.cpp  gpgsetexpirytimetest.cpp  gpgsetownertrusttest.cpp  gpgsignkeytest.cpp  installtest.cpp  test_editinteractor.h
kmime/tests/auto/: CMakeLists.txt
mailtransport/: CMakeLists.txt  addtransportdialog.cpp  transport.cpp  transportmanager.cpp  transportmanager.h  transporttype.cpp  transporttype.h  transporttype_p.h
mailtransport/tests/: CMakeLists.txt
qgpgme/: CMakeLists.txt
qgpgme/tests/: CMakeLists.txt
